# aegis-vanguard

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  EBPF_INTEGRATION_GUIDE.md  README.md
.github/workflows/: ci.yml
collector/: CMakeLists.txt
collector/ebpf/: probe_network.c  probe_process.c
collector/include/: config.hpp  config_reloader.hpp  health_checker.hpp  types.hpp
collector/src/: CMakeLists.txt  collector_main.cpp  collector_runner.cpp  collector_runner.hpp  config_loader.cpp  config_loader.hpp  config_reloader.cpp  event_builder.cpp  event_builder.hpp  health_checker.cpp  kafka_event_producer.cpp  kafka_event_producer.hpp
collector/src/crypto/: sha256.cpp  sha256.hpp
collector/src/sources/: event_source.hpp  fixture_event_source.cpp  fixture_event_source.hpp  linux_ebpf_event_source.cpp  linux_ebpf_event_source.hpp  source_record_parser.cpp  source_record_parser.hpp  synthetic_event_source.cpp  synthetic_event_source.hpp
collector/tests/: CMakeLists.txt  collector_tests.cpp
config/: ebpf-integration-test.yaml
config/dev/: collector.yaml  engine.yaml
config/prod/: collector.yaml  engine.yaml
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
dashboard/src/components/: AlertTable.tsx  KpiCard.tsx  TimelineBars.tsx
dashboard/src/hooks/: useDashboardData.ts
dashboard/src/pages/: index.tsx
dashboard/src/pages/api/: alerts.ts
dashboard/src/server/: alertStream.ts
dashboard/src/styles/: globals.css
deploy/: README.md  docker-compose.yml
deploy/clickhouse/init/: 001_create_events.sql
deploy/docker/: collector-cpp.Dockerfile  demo-stream.Dockerfile  engine-cpp.Dockerfile
deploy/env/: .env.example
deploy/grafana/dashboards/: aegis-overview.json
deploy/grafana/provisioning/dashboards/: dashboard.yaml
deploy/grafana/provisioning/datasources/: datasource.yaml
deploy/kafka/init/: create-topics.sh
deploy/scripts/: backup_clickhouse.ps1  build_demo_stream_seed.py  collector_smoke.ps1  engine_e2e.ps1  harden_env.ps1  produce_sample_event.ps1  restore_clickhouse.ps1  smoke_test.ps1
docs/: api_spec.md
docs/adr/: 0001-project-structure.md  0002-data-contract-versioning.md  0003-clickhouse-hot-columns.md  0004-risk-scoring-model.md
engine/: CMakeLists.txt
engine/include/: config.hpp  logger.hpp  types.hpp
engine/src/: CMakeLists.txt  engine_main.cpp
engine/src/detection/: alert_publisher.cpp  alert_publisher.hpp  rule.hpp  rule_engine.cpp  rule_engine.hpp
engine/src/pipeline/: clickhouse_writer.cpp  clickhouse_writer.hpp  dlq_handler.cpp  dlq_handler.hpp  event_validator.cpp  event_validator.hpp  kafka_consumer.cpp  kafka_consumer.hpp  kafka_producer.cpp  kafka_producer.hpp
engine/src/tests/: engine_detection_tests.cpp
rules/runtime/: README.md  external_archive_created_in_tmp.yml  external_auth_admin_failures.yml  external_auth_source_bruteforce.yml  external_data_staging_archive.yml  external_dns_tunnel_tool_exec.yml  external_download_chmod_exec.yml  external_interpreter_tmp_exec.yml  external_privileged_auth_burst.yml  external_rare_c2_port_egress.yml  external_recon_scanner_tool_exec.yml  external_reverse_shell_one_liner.yml  external_sensitive_file_enum.yml  external_smb_rdp_lateral_movement.yml  external_suspicious_download_exec.yml  external_temp_dropper_write.yml  sigma_like_suspicious_download.yml  windows_lsass_dump.yml  windows_ntlm_brute_force.yml
rules/validation/: README.md
runtime/mordor/: collector_fixture.generated.yaml  linux-exec-cluster.aegis.jsonl  windows-lateral-movement-cluster.aegis.jsonl  windows-lsass-dump-cluster.aegis.jsonl  windows-ntlm-bruteforce-cluster.aegis.jsonl  windows_campaign.aegis.jsonl  windows_campaign.fixture.jsonl  windows_campaign.report.json  windows_campaign.sample.aegis.jsonl  windows_campaign.sample.fixture.jsonl
scripts/: attack_sim.py  demo_stream.py  demo_stream_campaign.json  mordor_mapper.py  mordor_pipeline.py  mordor_replayer.py  mordor_windows_campaign.json  setup_dev.sh  validate_rules.py
shared/proto/: README.md  alert.proto  event.proto
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tools/: requirements.txt
tools/ebpf-loader/: 00-IMPLEMENTATION-SUMMARY.md  Makefile  README.md  aegis-ebpf-loader.service  ebpf-diagnostics.sh  loader.py  quick-start.sh  setup.sh  test-integration.sh
